Add edit and delete post api. Also updating the swagger spec.
